syntax = "proto3";

option csharp_namespace = "yuapi_OcelotGateway";

package quotacheck;

service QuotaCheck  {
    rpc CheckQuota (QuotaCheckRequest) returns (QuotaCheckReply);
}

message QuotaCheckRequest {
    int32 interfaceInfoId = 1;
    int32 userId = 2;
}

message UserInterfaceInfo {
    int32 userId = 1;
    int32 interfaceInfoId = 2;
    int32 totalNum = 3;
    int32 leftNum = 4;
    int32 status = 5;
    string createTime = 6;
    string updateTime = 7;
}

message QuotaCheckReply {
    bool success = 1;
    UserInterfaceInfo userInterfaceInfo = 2;
}
